--- a/tox.ini
+++ b/tox.ini
@@ -5,5 +5,5 @@ skipsdist = True
 [testenv]
 deps = -rrequirements.txt
 commands = python example.py
+           pytest tests/triplet_loss_test.py
 passenv = *
-allowlist_externals = *
