--- a/tox.ini
+++ b/tox.ini
@@ -7,3 +7,4 @@ deps = -rrequirements.txt
 commands = python example.py
            pytest tests/triplet_loss_test.py
 passenv = *
+allowlist_externals = *
