--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,6 @@ skipsdist = True
 [testenv]
 deps = -rrequirements.txt
 commands = python example.py
-           pytest tests/triplet_loss_test.py
+           pytest tests
 passenv = *
 allowlist_externals = *
