--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
         sudo apt-get update
         sudo apt-get install libsndfile1-dev
         python -m pip install --upgrade pip
-        pip install tox flake8 pytest
+        pip install tox flake8
     - name: Download checkpoints
       run: |
         wget -O ResCNN_triplet_training_checkpoint_265.h5 https://drive.google.com/uc\?export\=download\&id\=1F9NvdrarWZNktdX9KlRYWWHDwRkip_aP
