--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,7 @@ skipsdist = True
 
 [testenv]
 deps = -rrequirements.txt
+       pytest
 commands = python example.py
            pytest tests
 passenv = *
