add tox for keras + import tensorflow.keras instead of keras

--- a/tox.ini
+++ b/tox.ini
@@ -5,12 +5,10 @@ skipsdist = True
 
 [testenv]
 deps = -rrequirements.txt
+       pytest
        tf-2.3.0: tensorflow==2.3.0
        tf-2.4.0: tensorflow==2.4.0
        tf-2.5.0: tensorflow==2.5.0
        tf-2.6.0-rc1: tensorflow==2.6.0-rc1
-allowlist_externals = curl
-                      bash
-commands = bash download_checkpoint.sh
-           python example.py
-
+commands = python example.py
+           pytest tests
