--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
         pip install tox flake8
     - name: Download checkpoints
       run: |
-        wget -O ResCNN_triplet_training_checkpoint_265.h5 https://drive.google.com/uc\?export\=download\&id\=1F9NvdrarWZNktdX9KlRYWWHDwRkip_aP
+        wget -nv -O ResCNN_triplet_training_checkpoint_265.h5 https://drive.google.com/uc\?export\=download\&id\=1F9NvdrarWZNktdX9KlRYWWHDwRkip_aP
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
