add features from the Paulo Raca features

--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,22 @@
 [tox]
-envlist = {py3}-{tf-2.3.0,tf-2.4.0,tf-2.5.0,tf-2.6.0-rc1}
-# To avoid having a setup.py
-skipsdist = True
+envlist = {py3}-tensorflow-{2.6.2,2.7.0,2.8.0,2.9.0,2.10.0}
 
 [testenv]
-deps = -rrequirements.txt
-       pytest
-       tf-2.3.0: tensorflow==2.3.0
-       tf-2.4.0: tensorflow==2.4.0
-       tf-2.5.0: tensorflow==2.5.0
-       tf-2.6.0-rc1: tensorflow==2.6.0-rc1
-commands = python example.py
-           pytest tests
+setenv =
+       PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python
+deps = pytest
+       pylint
+       flake8
+       -rrequirements.txt
+       tensorflow-2.6.2: tensorflow==2.6.2
+       tensorflow-2.7.0: tensorflow==2.7.0
+       tensorflow-2.8.0: tensorflow==2.8.0
+       tensorflow-2.9.0: tensorflow==2.9.0
+       tensorflow-2.10.0: tensorflow==2.10.0
+commands = pylint --disable=R,C,W,E1136 *.py
+           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+           flake8 . --count --exclude=michel,tests --max-line-length 127 --statistics
+           python example.py
+           python example_pcm.py
+passenv = *
+install_command = pip install {packages}
