--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ tqdm>=4.45.0
 click>=7.1.1
 pandas>=1.0.3
 matplotlib>=3.2.1
-tensorflow>=2.3.0
+tensorflow-macos
 Keras>=2.3.1
 numpy>=1.18.2
 numba>=0.48
