--- a/tox.ini
+++ b/tox.ini
@@ -3,19 +3,18 @@ envlist = {py3}-tensorflow-{2.6.2,2.7.0,2.8.0,2.9.0,2.10.0}
 
 [testenv]
 setenv =
-       PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python
+    PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python
 deps = pytest
        pylint
        flake8
-       -rrequirements.txt
        tensorflow-2.6.2: tensorflow==2.6.2
        tensorflow-2.7.0: tensorflow==2.7.0
        tensorflow-2.8.0: tensorflow==2.8.0
        tensorflow-2.9.0: tensorflow==2.9.0
        tensorflow-2.10.0: tensorflow==2.10.0
-commands = pylint --disable=R,C,W,E1136 *.py
-           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-           flake8 . --count --exclude=michel,tests --max-line-length 127 --statistics
+commands = pylint --disable=R,C,W,E1136 deep_speaker
+           flake8 deep_speaker --count --select=E9,F63,F7,F82 --show-source --statistics
+           flake8 deep_speaker --count --exclude=michel,tests --max-line-length 127 --statistics
            python example.py
            python example_pcm.py
 passenv = *
