--- a/tox.ini
+++ b/tox.ini
@@ -16,5 +16,6 @@ commands = pylint --disable=R,C,W,E1136 deep_speaker
            flake8 deep_speaker --count --exclude=michel,tests --max-line-length 127 --statistics
            python example.py
            python example_pcm.py
+           pytest tests
 passenv = *
 install_command = pip install {packages}
